refactor: 리포지토리에서 비즈니스 판단 로직 분리 및 도메인 격리
- Ingestion 및 Redis Repository 레이어에 섞여 있던 비즈니스 비교 연산(신규/종료/변경 감지)을 순수 POJO인 StreamUpdateAnalyzer(도메인 서비스)로 분리
- RedisStreamRepository는 오직 Redis의 기술적 데이터 읽기/쓰기(Dumb) 역할만 수행하도록 분리
- StreamUpdateAnalyzerTest 도메인 비교 판단 로직을 검증하는 단위 테스트 추가
- RedisStreamRepositoryTest 단순화